--- a/组件.md
+++ b/组件.md
@@ -3,20 +3,284 @@
 
 游戏物体（Game Object）指的是出现在Hierarchy面板或者在Scenes场景中所有的游戏资源。包括空物体（Empty Object）、标准几何体、模型、摄像机、粒子、灯光、地形、树木等等。万物皆对象。
 
+## Component功能组件
+
+![](https://nts.newbieol.com/static/k25/02_%E6%B8%B8%E6%88%8F%E5%BC%95%E6%93%8E%E6%A0%B8%E5%BF%83/02_%E5%BC%95%E6%93%8E%E5%9F%BA%E7%A1%80%E7%9F%A5%E8%AF%86/img/%E5%9B%BE%E7%89%872.png)
+
+功能组件（Component[kəm’pəʊnənt]），是挂载到游戏物体上的功能组件。游戏对象通过添加不同的Component组件，从而使不同的游戏对象具备了不同的功能。所以我们可以说游戏对象（Game Object）是由一系列不同功能组件的集合。
+
+比如我们给游戏物体添加了刚体组件，可以使其具有物理系统功能。而给游戏角色添加动画组件，也可以使其具有了动画的能力。甚至脚本也是一种组件。
+
+Unity为我们提供了丰富的组件，如刚体组件，粒子系统，摄像机组件，GUILayer组件等。要注意的是，每一个游戏对象都至少有一个或多个组件。比如最简单的空物体对象（Empty Object），拥有一个Transform组件。而Transfrom组件包含了一个游戏物体的Position（位置），Rotation（旋转），Scale（缩放）三组信息。
+
+## 组件右上角小齿轮属性
+
+![](https://nts.newbieol.com/static/k25/02_%E6%B8%B8%E6%88%8F%E5%BC%95%E6%93%8E%E6%A0%B8%E5%BF%83/02_%E5%BC%95%E6%93%8E%E5%9F%BA%E7%A1%80%E7%9F%A5%E8%AF%86/img/%E5%9B%BE%E7%89%873.png)
+
+* 1、Reset：复位。恢复该组件的默认数值。如果是Transform组件，则会回到坐标系0,0,0原点。
+* 2、Move to Front：对多个子物体，将其移动到这些子物体的最上方。
+* 3、Move to Back：对多个子物体，将其移动到这些子物体的最下方。
+* 4、Remove Component：移除组件。销毁对应的组件，即把该组件从当前物体中去除。
+* 5、Move Up：上移组件的排列顺序。
+* 6、Move Down：下移组件的排列顺序。
+* 7、Copy Component：拷贝组件。此选项可以把组件中所有的属性信息值赋值到内存中。
+* 8、Paste Component As New：粘贴组件。当选择Copy Component选项后，可以在一个新的游戏物体中粘贴该组件，并把对应的所有信息也赋值过来。
+* 9、Paste Component Values：仅仅复制拷贝过来的其它组件的数值信息。
+
+## Camera摄像机
 
 ![](https://nts.newbieol.com/static/k25/02_%E6%B8%B8%E6%88%8F%E5%BC%95%E6%93%8E%E6%A0%B8%E5%BF%83/02_%E5%BC%95%E6%93%8E%E5%9F%BA%E7%A1%80%E7%9F%A5%E8%AF%86/img/%E5%9B%BE%E7%89%874.png)
 * 1、Clear Flags：清除标记。显示背景内容，默认为天空盒子。
 * 2、Background：背景颜色。
 * 3、Culling Mask：剔除遮罩。用于显示某些层（可以过滤不需要显示的层）。
 * 4、Projection：摄像机投射方式（透视->广角/正交->平行）。
-Perspective(透视):以3D方式观察物体
-Orthographic(正交):以2D方式观察物体
+  Perspective(透视):以3D方式观察物体
+  Orthographic(正交):以2D方式观察物体
 * 5、Field of View：视野范围。可以用这个选项来做狙击镜的效果.
 * 6、Clipping Planes 裁剪面。相机到开始和结束渲染的距离。
 * 7、Viewport Rect：矩形视窗（可控制视窗的偏移量与长度和宽度，即：分屏显示功能）。
 * 8、Depth：摄像机深度（若存在若干摄像机，则先渲染数值小的摄像机画面）。
 * 9、Rendering Parth：渲染路径。
 * 10、Target Texture：目标贴图纹理。
-原理：就是将此摄像机摄像的画面影响实时打在一张指定的目标纹理贴图上，此时，这张贴图存有这个摄像机所摄的”实况转播信息“了，则此贴图可以随便放在某个Plane地板或者UI界面中。
+  原理：就是将此摄像机摄像的画面影响实时打在一张指定的目标纹理贴图上，此时，这张贴图存有这个摄像机所摄的”实况转播信息“了，则此贴图可以随便放在某个Plane地板或者UI界面中。
 * 11、Occlusion Culling：是否使用遮罩剔除。
 * 12、HDR：启用摄像机的高动态范围渲染（High Dynamic Range Rendering）。
+
+## 系统光源_Light 光源
+
+灯光用来照亮场景和对象，可以创造完美的视觉气氛。灯光可以用来模拟太阳、燃烧的火柴、探照灯、手电筒、枪火光、爆炸等等。
+
+我们通过在Hierarchy面板->Create->Light来创建4种不同的灯光效果。
+
+![](https://nts.newbieol.com/static/k25/02_%E6%B8%B8%E6%88%8F%E5%BC%95%E6%93%8E%E6%A0%B8%E5%BF%83/02_%E5%BC%95%E6%93%8E%E5%9F%BA%E7%A1%80%E7%9F%A5%E8%AF%86/img/img3_%E5%9B%BE%E7%89%871.png)
+
+不同类型的光照角度，范围
+
+![](https://nts.newbieol.com/static/k25/02_%E6%B8%B8%E6%88%8F%E5%BC%95%E6%93%8E%E6%A0%B8%E5%BF%83/02_%E5%BC%95%E6%93%8E%E5%9F%BA%E7%A1%80%E7%9F%A5%E8%AF%86/img/img3_%E5%9B%BE%E7%89%872.png)
+
+![](https://nts.newbieol.com/static/k25/02_%E6%B8%B8%E6%88%8F%E5%BC%95%E6%93%8E%E6%A0%B8%E5%BF%83/02_%E5%BC%95%E6%93%8E%E5%9F%BA%E7%A1%80%E7%9F%A5%E8%AF%86/img/img3_%E5%9B%BE%E7%89%873.png)
+
+![](https://nts.newbieol.com/static/k25/02_%E6%B8%B8%E6%88%8F%E5%BC%95%E6%93%8E%E6%A0%B8%E5%BF%83/02_%E5%BC%95%E6%93%8E%E5%9F%BA%E7%A1%80%E7%9F%A5%E8%AF%86/img/img3_%E5%9B%BE%E7%89%874.png)
+
+四类光源的定义，区别
+
+![](https://nts.newbieol.com/static/k25/02_%E6%B8%B8%E6%88%8F%E5%BC%95%E6%93%8E%E6%A0%B8%E5%BF%83/02_%E5%BC%95%E6%93%8E%E5%9F%BA%E7%A1%80%E7%9F%A5%E8%AF%86/img/img3_%E5%9B%BE%E7%89%87100.png)
+
+Light灯光组件
+
+![](https://nts.newbieol.com/static/k25/02_%E6%B8%B8%E6%88%8F%E5%BC%95%E6%93%8E%E6%A0%B8%E5%BF%83/02_%E5%BC%95%E6%93%8E%E5%9F%BA%E7%A1%80%E7%9F%A5%E8%AF%86/img/img3_%E5%9B%BE%E7%89%875.png)
+
+![](https://nts.newbieol.com/static/k25/02_%E6%B8%B8%E6%88%8F%E5%BC%95%E6%93%8E%E6%A0%B8%E5%BF%83/02_%E5%BC%95%E6%93%8E%E5%9F%BA%E7%A1%80%E7%9F%A5%E8%AF%86/img/img3_%E5%9B%BE%E7%89%876.png)
+
+* 1、Type：光源的类型。
+* 2、Color：光照颜色。
+* 3、Intensity：[ɪn’tensɪtɪ] 光照浓度。
+* 4、Cookie：设置贴图Alpha通道。（在此属性中放置一张透明贴图作为蒙版，从而通过灯光照射打到地面上形成一个预期形状的光影效果）。
+* 5、Cookie Size：设置贴图Alpha通道尺寸大小。
+* 6、Shadow Type：阴影类型。（Soft Shadows参数最耗费资源）。
+* 7、Draw Halo：绘制光晕（在点光源中使用雾蒙蒙的效果）。如果勾选该选项，一个球形的光晕将被绘制。光晕的半径等于范围(Range)。
+* 8、Flare：设置光源的闪光效果。用于在光照位置上渲染的闪光。
+* 9、Render Mode：光源的渲染模式（渲染优先级）。选择光源是作为顶点光(vertex)，像素光(pixel)，还是自动的渲染方式。
+ 
+注：要说明的是，灯光有对渲染速度有非常大的影响，因此必须权衡前后照明质量和游戏速度。由于像素光照比顶点光照奢侈得多(更耗费资源)，Unity将只在最亮的光逐个像素渲染。
+
+* 10、Culling Mask：通过层设置指定图层不受到光照影响。
+* 11、Lightmapping：设置光照贴图模式。
+  Realtime Only：实时光照。动态光源
+  Auto：自动的
+  Baked Only：烘焙后的。静态光源
+
+
+**注意: 只有平行光默认有影子,其他光源将Shadow Type修改即可**
+
+## 系统资源 Texture贴图纹理
+
+### Texture属性
+
+![](https://nts.newbieol.com/static/k25/02_%E6%B8%B8%E6%88%8F%E5%BC%95%E6%93%8E%E6%A0%B8%E5%BF%83/02_%E5%BC%95%E6%93%8E%E5%9F%BA%E7%A1%80%E7%9F%A5%E8%AF%86/img/img4_%E5%9B%BE%E7%89%871.png)
+
+* Texture Type：贴图类型 
+* nAlpha from Grayscale：从灰度图中是否产生Alpha通道
+* Wrap Mode：贴图与贴图之间的拼接模式 *
+* Filter Mode：过滤模式
+* AnIso Level：异向性过滤等级
+
+### Texture type
+
+![](https://nts.newbieol.com/static/k25/02_%E6%B8%B8%E6%88%8F%E5%BC%95%E6%93%8E%E6%A0%B8%E5%BF%83/02_%E5%BC%95%E6%93%8E%E5%9F%BA%E7%A1%80%E7%9F%A5%E8%AF%86/img/img4_%E5%9B%BE%E7%89%872.png)
+
+* Texture：普通贴图
+* Normal map：法线贴图
+* Editor GUI and Legacy GUI：UI贴图
+* Sprite（2D and UI）：精灵
+* Cursor：鼠标指针
+* Reflection：反射贴图
+* Cookie：遮罩贴图
+* Lightmap：烘焙贴图
+* Advanced：高级（可自定义一些贴图属性）
+
+### Texture 修改Tilling参数
+
+创建Plane，并拖拽到Plane上做为贴图，修改Tiling参数
+![](https://nts.newbieol.com/static/k25/02_%E6%B8%B8%E6%88%8F%E5%BC%95%E6%93%8E%E6%A0%B8%E5%BF%83/02_%E5%BC%95%E6%93%8E%E5%9F%BA%E7%A1%80%E7%9F%A5%E8%AF%86/img/img4_%E5%9B%BE%E7%89%873.png)
+
+![](https://nts.newbieol.com/static/k25/02_%E6%B8%B8%E6%88%8F%E5%BC%95%E6%93%8E%E6%A0%B8%E5%BF%83/02_%E5%BC%95%E6%93%8E%E5%9F%BA%E7%A1%80%E7%9F%A5%E8%AF%86/img/img4_%E5%9B%BE%E7%89%874.png)
+
+![](https://nts.newbieol.com/static/k25/02_%E6%B8%B8%E6%88%8F%E5%BC%95%E6%93%8E%E6%A0%B8%E5%BF%83/02_%E5%BC%95%E6%93%8E%E5%9F%BA%E7%A1%80%E7%9F%A5%E8%AF%86/img/img4_%E5%9B%BE%E7%89%875.png)
+
+Texture Wrap Mode（贴图间拼接模式）
+
+修改Wrap Mode参数：
+
+Repeat：连续的分开状态
+
+Clamp：拉伸状态
+
+![](https://nts.newbieol.com/static/k25/02_%E6%B8%B8%E6%88%8F%E5%BC%95%E6%93%8E%E6%A0%B8%E5%BF%83/02_%E5%BC%95%E6%93%8E%E5%9F%BA%E7%A1%80%E7%9F%A5%E8%AF%86/img/img4_%E5%9B%BE%E7%89%876.png)
+
+![](https://nts.newbieol.com/static/k25/02_%E6%B8%B8%E6%88%8F%E5%BC%95%E6%93%8E%E6%A0%B8%E5%BF%83/02_%E5%BC%95%E6%93%8E%E5%9F%BA%E7%A1%80%E7%9F%A5%E8%AF%86/img/img4_%E5%9B%BE%E7%89%877.png)
+
+![](https://nts.newbieol.com/static/k25/02_%E6%B8%B8%E6%88%8F%E5%BC%95%E6%93%8E%E6%A0%B8%E5%BF%83/02_%E5%BC%95%E6%93%8E%E5%9F%BA%E7%A1%80%E7%9F%A5%E8%AF%86/img/img4_%E5%9B%BE%E7%89%878.png)
+
+![](https://nts.newbieol.com/static/k25/02_%E6%B8%B8%E6%88%8F%E5%BC%95%E6%93%8E%E6%A0%B8%E5%BF%83/02_%E5%BC%95%E6%93%8E%E5%9F%BA%E7%A1%80%E7%9F%A5%E8%AF%86/img/img4_%E5%9B%BE%E7%89%879.png)
+
+Materials材质
+
+Material[mə’tɪərɪəl]材质用来把网格（Mesh）或粒子渲染器（Particle Renderers）贴到游戏对象上。Material是控制游戏中物体的外观的资产，影响着对象被显示的效果。
+
+这些组件不能在没有材质的情况下显示。
+
+而任何材质的属性取决于选定的着色器（Shader）发生变化。
+
+许多物体可以共用同一个材质球。好处：节省资源的开销、修改的效率。缺点：容易不知情下修改了多个物体。
+
+![](https://nts.newbieol.com/static/k25/02_%E6%B8%B8%E6%88%8F%E5%BC%95%E6%93%8E%E6%A0%B8%E5%BF%83/02_%E5%BC%95%E6%93%8E%E5%9F%BA%E7%A1%80%E7%9F%A5%E8%AF%86/img/img4_%E5%9B%BE%E7%89%8712.png)
+
+Material材质的基本属性：
+
+* 1、Shader：着色器。将被材质（Material）使用的着色器。
+* 2、Main Color：主颜色。默认为白色。
+* 3、Base：基本纹理贴图。（皮肤）。
+
+Mesh是指模型的网格，MeshFilter一般是用于获得模型网格的组件，而MeshRender是用于把网格渲染出来的组件。
+
+我们可以理解为：Mesh Filter决定了物体的形状、模样；Mesh Render决定了物体的颜色和纹理。
+
+即: Mesh Filter获取我们的模型; Mesh Render把它在场景中渲染
+
+纹理贴图。材质球与着色器关系
+材质（材质球）是由贴图与着色器的渲染而形成的。最终应用到场景内物体的身上
+
+![](https://nts.newbieol.com/static/k25/02_%E6%B8%B8%E6%88%8F%E5%BC%95%E6%93%8E%E6%A0%B8%E5%BF%83/02_%E5%BC%95%E6%93%8E%E5%9F%BA%E7%A1%80%E7%9F%A5%E8%AF%86/img/img4_%E5%9B%BE%E7%89%8717.png)
+
+创建立方体+ 添加Material是材质
+
+创建一个立方体：Hierarchy面板->Create->Cube；
+
+再创建一个材质：Project面板->Create->Material。
+![](https://nts.newbieol.com/static/k25/02_%E6%B8%B8%E6%88%8F%E5%BC%95%E6%93%8E%E6%A0%B8%E5%BF%83/02_%E5%BC%95%E6%93%8E%E5%9F%BA%E7%A1%80%E7%9F%A5%E8%AF%86/img/img4_%E5%9B%BE%E7%89%8718.png)
+
+![](https://nts.newbieol.com/static/k25/02_%E6%B8%B8%E6%88%8F%E5%BC%95%E6%93%8E%E6%A0%B8%E5%BF%83/02_%E5%BC%95%E6%93%8E%E5%9F%BA%E7%A1%80%E7%9F%A5%E8%AF%86/img/img4_%E5%9B%BE%E7%89%8719.png)
+
+在Mesh filter中指定Mesh网格
+
+![](https://nts.newbieol.com/static/k25/02_%E6%B8%B8%E6%88%8F%E5%BC%95%E6%93%8E%E6%A0%B8%E5%BF%83/02_%E5%BC%95%E6%93%8E%E5%9F%BA%E7%A1%80%E7%9F%A5%E8%AF%86/img/img4_%E5%9B%BE%E7%89%8720.png)
+
+在Mesh Renderer中指定Materials
+
+![](https://nts.newbieol.com/static/k25/02_%E6%B8%B8%E6%88%8F%E5%BC%95%E6%93%8E%E6%A0%B8%E5%BF%83/02_%E5%BC%95%E6%93%8E%E5%9F%BA%E7%A1%80%E7%9F%A5%E8%AF%86/img/img4_%E5%9B%BE%E7%89%8721.png)
+
+Cast Shadows：是否产生阴影效果
+
+Receive Shadows：是否接收阴影
+
+动态改变材质颜色的代码为：
+
+Getcomponent«Renderer»().material.color = Color.Red//把材质编辑为红色
+
+Shader着色器
+
+我们如果想对选择的材质做更丰富的显示效果，需要编辑材质中Shader的属性。根据选择的着色器类型，在Inspector检视面板会出现许多不同的属性。
+
+![](https://nts.newbieol.com/static/k25/02_%E6%B8%B8%E6%88%8F%E5%BC%95%E6%93%8E%E6%A0%B8%E5%BF%83/02_%E5%BC%95%E6%93%8E%E5%9F%BA%E7%A1%80%E7%9F%A5%E8%AF%86/img/img4_%E5%9B%BE%E7%89%8722.png)
+
+Unity内置Shader标准着色器
+
+Unity中提供了一些基本的着色器,我们可以进行一些简单的了解,在实际开发中,如果Unity提供的Shader效果不能满足要求,那么还需要自己来写一些Shader效果
+
+* 1、Bumped Diffuse：[bʌmpt]。凹凸散射（凹凸漫反射）。
+
+凡Bumped凹凸的，都是带法线贴图的，使用Normal map来表现物体表面的细节。
+
+* 2、Bumped Specular：凹凸高光（法线凹凸贴图 + 高光）。
+* 3、Decal：[’diːkæl]。贴花纸。（制作两个贴图叠加效果）。
+
+贴花着色器，需要主纹理、贴花纹理（带alpha）。
+
+* 4、Diffuse：[dɪ’fjuːz]。漫反射。（弥漫的散开的）。默认的Shader。
+* 5、Diffuse Detail：[’diːteɪl]。漫反射 + 细节（漫反射细节着色器）。比如地形，当镜头更接近时，使其拥有更清晰、更细节的效果。
+* 6、Parallax Diffuse：[’pærəlæks]。视差（高度图） + 漫反射。（实现很强的明暗关系（立体感），如鹅卵石效果)。
+* 7、Parallax Specular：视差（高度图） + 高光。即：视差高光。像镜面般会反射。
+* 8、Specular：[’spekjʊlə]。 高光。（镜子的；会反射的；带金属质感）。且随着镜头动态的显示其高光效果的。
+* 9、VertexLit：[’vɜːteks]。定点光，顶点照亮。
+
+Unity内置的着色器库
+
+* 1、Mobile：移动的
+* 2、Nature：自然的
+* 3、Particles：粒子系统的
+  Particles/Additive：[’ædɪtɪv]附加的。（一般会把背景剔除）。
+   Particles/Alpha Blended：Alpha混合。（双面透视效果，比如红旗正反可以观看）。
+* 4、Reflective：反射的。反射周围图像效果。一张主帖图，一个Cubemap用于反射。
+　　 主纹理的alpha通道定义在物体表面的反射强度。
+　　 任何场景灯光将会增加反射表面的照明。
+* 5、RenderFX：着色
+  RenderFx/SkyBox：天空盒着色器。
+* 6、Self-Illumin：自发光的。主要用于发光物体。
+　　 一张主帖图，一张自发光纹理。
+　　 发光基于发光纹理的alpha值，alpha为0的不发光，1表示充分发光。不需要任何灯光照射来发光。
+　　 任何顶点灯光或像素灯光将简单增加更多光照到自发光上。
+* 7、Toon：卡通的
+* 8、Transparent：[træn’spær(ə)nt]。透明的。透明着色器用于实现全透明或者半透明效果。
+  选中该选项后,调整Main Color中的R/G/B/A色值中的A选项,从而达到调整透明度的效果。
+  Transparent/Cutout/..透明镂空着色器。
+* 9、Unlit：[ʌn’lɪt]。不发光的，不受灯光影响的。比如: 场景中需要一张背景贴图,而又需要使其不受环境灯光颜色和亮度的影响时使用.
+  Mobile->Unlit(Supports Lightmap) : 支持一个Lightmap贴图的,即“自身光照的”.可以理解为一种自发光的方式
+  不受环境和灯光的影响
+* 10、Legacy Shaders：[’legəsɪ]。遗留着色器。。(老版本着色器)
+分类：
+* 标准着色器：Normal
+* 透明着色器：Transparent
+* 镂空着色器：Transparent/Cutout
+* 自发光着色器：Self-Illumin
+* 反射着色器：Reflective
+
+手动创建法线
+
+![](https://nts.newbieol.com/static/k25/02_%E6%B8%B8%E6%88%8F%E5%BC%95%E6%93%8E%E6%A0%B8%E5%BF%83/02_%E5%BC%95%E6%93%8E%E5%9F%BA%E7%A1%80%E7%9F%A5%E8%AF%86/img/img4_%E5%9B%BE%E7%89%8724.png)
+
+![](https://nts.newbieol.com/static/k25/02_%E6%B8%B8%E6%88%8F%E5%BC%95%E6%93%8E%E6%A0%B8%E5%BF%83/02_%E5%BC%95%E6%93%8E%E5%9F%BA%E7%A1%80%E7%9F%A5%E8%AF%86/img/img4_%E5%9B%BE%E7%89%8725.png)
+
+Bumped需要增加Normal法线贴图来实现凹凸效果，在Project面板中选中图片素材：
+* ->Ctrl+D（复制）一个图片
+* ->在Inspector面板中调节Texture Type（图片类型）属性为Normal map（法线图）
+* ->Apply（应用属性修改）。要注意的是勾选Alpha from Grayscale（阿尔法从灰度）选项会让凹凸感更强烈。
+* ->回到Material材质球上，选中要修改的材质球，在Inspector面板上修改Shader属性，调节为：Bumped Diffuse，并把法线贴图拖放进来。
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
