--- a/物体激活隐藏.md
+++ b/物体激活隐藏.md
@@ -172,6 +172,20 @@ so,
 
 ##Time.deltaTime的计时器
 ```C#
+public class TimeDemo : MonoBehaviour {
+
+    float timer = 1f;
+    int count = 0;
+
+	void Update () {
+        timer -= Time.deltaTime;
+        if(timer <= 0)
+        {
+            timer = 1f;
+            Debug.Log(count++);
+        }
+}
+
 ```
 
 ## Time.timeScale 时间缩放
